--- a/stadtrallye.html
+++ b/stadtrallye.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <div id="loginBox">
-    <button id="loginBtn">Admin Login</button>
+    <button id="loginBtn">Login</button>
   </div>
   <div id="adminPanel">
     <strong>Admin-Modus aktiv</strong>
@@ -295,6 +295,7 @@ updateTeamDropdowns();
 </script>
 </body>
 </html>
+
 
 
 
