--- a/stadtrallye.html
+++ b/stadtrallye.html
@@ -85,7 +85,7 @@
         </tr>
       </table>
     </form>
-    <h3>Teamnamen verwalten (nur Admin)</h3>
+    <h3>Teamnamen verwalten</h3>
     <div id="teamEditor">
       <ol id="teamList"></ol>
       <input type="text" id="newTeamName" placeholder="Neues Team" />
@@ -300,6 +300,7 @@ updateTeamDropdowns();
 </script>
 </body>
 </html>
+
 
 
 
