--- a/stadtrallye.html
+++ b/stadtrallye.html
@@ -13,6 +13,14 @@
     th { background: silver; }
     .right { float: right; }
     h2, h3 { margin-bottom: 6px; }
+
+   body { font-family: sans-serif; }
+    img {
+      max-width: 600px;
+      border: 1px solid black;
+
+
+    
   </style>
 </head>
 <body>
@@ -23,6 +31,17 @@
     <strong>Admin-Modus aktiv</strong>
     <button id="logoutBtn" class="right">Logout</button>
   </div>
+
+
+<h1>Stadtrallye – Karte</h1>
+
+  <!-- Das Bild einfügen (nachdem das PDF konvertiert wurde, z. B. in PNG) -->
+  <img src="Karte.png" alt="Stadtrallye Karte">
+
+
+
+
+
   <h2>Ranking-Liste</h2>
   <table id="rankingTable">
     <thead><tr><th>Platz</th><th>Teamname</th><th>Punkte</th></tr></thead>
@@ -300,6 +319,7 @@ updateTeamDropdowns();
 </script>
 </body>
 </html>
+
 
 
 
