--- a/stadtrallye.html
+++ b/stadtrallye.html
@@ -24,6 +24,16 @@
   </style>
 </head>
 <body>
+
+
+
+  <h1>Stadtrallye – Karte</h1>
+  <!-- Das Bild einfügen (nachdem das PDF konvertiert wurde, z. B. in PNG) -->
+  <img src="karte.png" alt="Stadtrallye Karte">
+
+
+
+    
   <div id="loginBox">
     <button id="loginBtn">Login</button>
   </div>
@@ -31,16 +41,6 @@
     <strong>Admin-Modus aktiv</strong>
     <button id="logoutBtn" class="right">Logout</button>
   </div>
-
-
-<h1>Stadtrallye – Karte</h1>
-
-  <!-- Das Bild einfügen (nachdem das PDF konvertiert wurde, z. B. in PNG) -->
-  <img src="Karte.png" alt="Stadtrallye Karte">
-
-
-
-
 
   <h2>Ranking-Liste</h2>
   <table id="rankingTable">
@@ -319,6 +319,7 @@ updateTeamDropdowns();
 </script>
 </body>
 </html>
+
 
 
 
